namespace-definition.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

# Create Resource Quota for the name space
apiVersion: v1
kind: ResourceQuota
metadata:
  name: namespace-quota
  namespace: dev
spec:
  hard:
    pods: "10"
    requests.cpu: "4"
    requests.memory: 5Gi
    limits.cpu: "10"
    limits.memory: 10Gi



# Common commands
# kubectl get pods --namespace=prod
# kubectl config set-context $(kubectl config current-context) --namepsace=dev

# kubectl get svc -n namespaceName # able to get dns
