readiness-liveness.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp

spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 8080
  readinessProbe:
    httpGet:
      path: /api/ready
      port: 8080
      initialDelaySeconds: 10 # application will take 10 seconds to warm up !!
      periodSeconds: 5 # determine how often to the probe !!
      failureThreshold: 8 # make more attempts !!
    
    # tcpSocket:
    #   port: 3306

    # exec:
    #   command:
    #     - cat
    #     - /app/is_ready
  liveinessProbe:
    httpGet:
      path: /api/healthy
      port: 8080
      initialDelaySeconds: 10 # application will take 10 seconds to warm up !!
      periodSeconds: 5 # determine how often to the probe !!
      failureThreshold: 8 # make more attempts !!
    
    # tcpSocket:
    #   port: 3306

    # exec:
    #   command:
    #     - cat
    #     - /app/is_ready
    

  # alert how health your pods are !!!

# Common commands

# kubectl logs -f pod-name container-name !!! # check pog + container logs for debugging !!!!!!

# The kubelet is a critical component of a Kubernetes node. It is responsible for managing the state of pods and containers on a node, ensuring they are running as expected. 

# Kubelet is an essential component of Kubernetes. It is an agent that runs on each node in a Kubernetes cluster and ensures that the containers in Pods are running as expected.

# kubectl top node # check node cpu / memory usage
# kubectl top pod # check pod cpu / memory usage
