role-with-bindings.yaml
# check whether username and password are valid or not
# curl -v -k https://localhost:6443/api/v1/pods -u "user1:password123"

# Modify the kube-apiserver startup options to include the basic-auth file

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: kube-apiserver
  namespace: kube-system
spec:
  containers:
  - command:
    - kube-apiserver
    - --authorization-mode=Node,RBAC
      <content-hidden>
    - --basic-auth-file=/tmp/users/user-details.csv

# Create the necessary roles and role bindings for these users:
